# yonac-llvm

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  FIXES_SUMMARY.md  INSTALL.md  PROGRESS_REPORT.md  README.md  TODO_LIST.md  antlr-format.config  erl_crash.dump  package-lock.json  package.json  test-hanging.sh  test.runsettings  test.yona  vcpkg-configuration.json  vcpkg.json  yonac-llvm.cpp  yonac-llvm.h
.cursor/rules/: project-guidance.mdc
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  qodana_code_quality.yml  release.yml
Formula/: yona.rb
bench/: README.md  history.jsonl  runner.py  setup.sh  windows-full-bench-2026-04-21-n10-filled.json  windows-full-bench-2026-04-21-n10-missing-only.json  windows-full-bench-2026-04-21-n10.json  windows-full-bench-2026-04-21.json  windows-full-bench-2026-04-22-n10-winrefs-rss.json  windows-full-bench-2026-04-22-n10-winrefs.json  windows-full-bench-2026-04-24-n10-v011-run1.json  windows-full-bench-2026-04-24-n10-v011-run2.json  windows-full-bench-2026-04-24-n10-v011-run3.json  windows-full-bench-2026-04-24-n10-v011.json  windows-full-bench-2026-04-25-n10-borrow-clean-run1.json  windows-full-bench-2026-04-25-n10-borrow-clean-run2.json  windows-full-bench-2026-04-25-n10-borrow-clean-run3.json  windows-full-bench-2026-04-25-n10-borrow-meta-run2.json  windows-full-bench-2026-04-25-n10-borrow-meta-run3.json  windows-full-bench-2026-04-25-n10-borrow-meta.json  windows-full-bench-2026-04-25-n10-regen-yonai-run1.json  windows-full-bench-2026-04-25-n10-regen-yonai-run2.json  windows-full-bench-2026-04-25-n10-regen-yonai-run3.json  windows-full-bench-2026-04-26-n10-after-http.json  windows-io-fix-check.json  windows-io-fix-check2.json  windows-parallel-async-n10.json  windows-startup-rss-smoke.json
bench/collections/: dict_build.yona  int_array_fill_sum.yona  int_array_map.yona  int_array_sum.yona  list_map_filter.expected  list_map_filter.yona  list_reverse.yona  list_sum.yona  set_build.yona
bench/concurrency/: channel_fanin.yona  channel_pipeline.expected  channel_pipeline.yona  channel_throughput.yona  par_map.expected  par_map.yona  parallel_async.yona  seq_map.yona  sequential_async.yona  task_group_arena.yona
bench/core/: fibonacci.yona  queens.yona  sieve.yona  sort.yona  tak.yona
bench/data/: bench_text.txt
bench/io/: binary_read_chunks.yona  binary_write_read.yona  file_parallel_read.expected  file_parallel_read.yona  file_parallel_read_large.expected  file_parallel_read_large.yona  file_read.expected  file_read.yona  file_read_large.yona  file_readlines.expected  file_readlines.yona  file_readlines_large.expected  file_readlines_large.yona  file_write_read.yona  file_write_read_large.expected  file_write_read_large.yona  process_exec.yona  process_spawn.yona
cli/: main.cpp
cmake/: YonaInProcessLld.cmake  homebrew-llvm-toolchain.cmake  linux-llvm-toolchain.cmake  windows-llvm-toolchain.cmake
docs/: array-trait.md  async-implementation-plan.md  async.md  auto-derive.md  benchmark-results-windows.md  benchmark-results.md  c-embedding-api.md  channels.md  currying-and-integration.md  development-log.md  effects.md  error-codes.md  extern-decl.md  interpreter-internals.md  iterators.md  language-syntax.md  linear-types.md  llvm-backend-plan.md  memory-management.md  module-system.md  pattern-matching.md  persistent-data-structures.md  platform-architecture.md  platform-windows.md  prelude.md  project-roadmap.md  readme.md  refinement-types.md  row-polymorphism.md  stdlib-plan.md  structured-concurrency.md  style-guide.md  sum-types.md  todo-list.md  traits.md  type-checker-design.md  type-introspection.md  type-system-analysis.md  type-system-api.md  type-system-implementation.md  (+1 more)
include/: Codegen.h  DeriveEngine.h  Diagnostic.h  ErrorListener.h  ErrorStrategy.h  EscapeAnalysis.h  InProcessLld.h  Interpreter.h  LLVMCompiler.h  LastUseAnalysis.h  Lexer.h  LinkerPlan.h  Optimizer.h  Parser.h  SourceLocation.h  SymbolTable.h  TypeChecker.h  YonaLexerBase.h  YonaVisitor.h  any_factory.h  any_helpers.h  ast.h  ast_visitor.h  ast_visitor_impl.h  ast_visitor_result.h  colors.h  common.h  dependency_analyzer.h  dll_safe_any.h  interpretation.h  interpreter.h  interpreter_facade.h  optimizer.h  optimizer_result.h  runtime.h  runtime_async.h  terminal.h  thread_pool.h  types.h  utils.h  (+4 more)
lib/: Prelude.yona  Prelude.yonai
packaging/: yona.spec
parser/: YonaLexer.g4  YonaParser.g4
repl/: main.cpp
scripts/: cloc.sh  format.sh  gendocs.py
src/: Codegen.cpp  Diagnostic.cpp  ErrorListener.cpp  ErrorListener.h  ErrorStrategy.cpp  InProcessLld.cpp  Interpreter.cpp  LLVMCompiler.cpp  Lexer.cpp  LinkerPlan.cpp  Optimizer.cpp  Parser.cpp  SymbolTable.cpp  TypeChecker.cpp  TypeChecker_TypeDefinition.cpp  YonaLexerBase.cpp  YonaVisitor.cpp  any_factory.cpp  ast.cpp  common.cpp  compiled_runtime.c  dependency_analyzer.cpp  dll_exports.cpp  interpreter.cpp  interpreter_facade.cpp  main.cpp  optimizer.cpp  runtime.cpp  runtime_async.cpp  thread_pool.cpp  utils.cpp  yona_api.cpp
test/: adt_test.cpp  ast.cpp  c_api_test.cpp  catch_main.cpp  codegen_test.cpp  comprehensive_test.cpp  currying_test.cpp  doctest_main.cpp  field_access_test.cpp  identity_test.cpp  identity_test.cpp.gtest.bak  integration_test.cpp  interpreter_basic.cpp  interpreter_byte_test.cpp  interpreter_cons_test.cpp  interpreter_debug.cpp  interpreter_exceptions.cpp  interpreter_fixes_test.cpp  interpreter_generators.cpp  interpreter_minimal.cpp  interpreter_range_sequence.cpp  interpreter_visitors_test.cpp  interpreter_zerofill_shift_test.cpp  lambda_minimal_test.cpp  lambda_test.cpp  let_with_function_test.cpp  lexer_test.cpp  linker_plan_test.cpp  module_test.cpp  native_module_test.cpp  net_runtime_test.cpp  newline_syntax_test.cpp  or_pattern_test.cpp  parser_debug.cpp  pattern_matching_new_features_test.cpp  pattern_matching_test.cpp  quick_test.cpp  repo_paths.h  runtime_guards_test.cpp  sanity_test.cpp  (+13 more)
(+760 files in other folders)
